--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tributo Hip-Hop</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -28,4 +28,5 @@
         <p>feito por Pedro Henrique</p>
     </footer>
 </body>
+
 </html>
